# starOptique

./: package-lock.json  package.json
client/: index.html  vite.config.js
client/byhnex-vault-nft/: Anchor.toml  Cargo.toml
client/byhnex-vault-nft/crates/anchor-syn/src/: lib.rs
client/byhnex-vault-nft/crates/anchor-syn/src/idl/: defined.rs
client/byhnex-vault-nft/crates/anchor-syn/src/parser/: context.rs
client/byhnex-vault-nft/programs/byhnex_vault_nft/: Cargo.toml
client/byhnex-vault-nft/programs/byhnex_vault_nft/src/: lib.rs
client/src/: App.vue  main.js
client/src/assets/: styles.css
client/src/components/: OrdersPanel.vue  SidebarNav.vue
client/src/router/: index.js
client/src/services/: api.js  customMarketplace.js  phantom.js
client/src/views/: HomeView.vue  MarketplaceView.vue  SellersView.vue  ShipView.vue
netlify/functions/: api.js
server/src/: config.js  index.js
server/src/routes/: api.js
server/src/services/: catalogService.js  customMarketplaceService.js  marketService.js  orderbookService.js
server/src/utils/: cache.js
